# IziPiziStickers_bot

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  README.ru.md  answers.py  bot.py  dashboard.example.json  dashboard.json  description.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: checks.yml  deploy.yml  github-actions-demo.yml  lint-push.yml
bot/: bot.py
bot/config_data/: config.py
bot/database/: blacklist.py  users.py
bot/filters/: my_filters.py
bot/handlers/: adminmode.py  base_handlers.py  formatting_handlers.py  other_handlers.py  service_handlers.py
bot/key_boards/: inlinekeyboards.py  main_menu.py
bot/lexicon/: lexicon.py
bot/middlewares/: analytics.py  blacklist.py  redis_session.py  throttling.py
bot/services/: admins_services.py  analytics_services.py  convert.py  redis.py  services.py
bot/state/: fsm.py
bot/tests/: conftest.py  test_something.py
bot/tests/docs/: lexicon_for_tests.py
filters/: my_filters.py
handlers/: base_handlers.py  formatting_handlers.py  other_handlers.py  proc_working_handlers.py
key_boards/: main_menu.py  start_keyboard.py
lexicon/: lexicon.py
scripts/: change_id.sh  deploy.sh
services/: convert.py  services.py
tests/: conftest.py
tests/docs/: lexicon_for_tests.py
