[tool.poetry]
name = "izipizibot"
version = "0.1.0"
description = "Create stickers without leaving Telegram"
authors = ["PetruninKV"]
readme = "README.md"
homepage = "https://t.me/make_photo_for_sticker_bot"
repository = "https://github.com/PetruninKV/IziPiziStickers_bot"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
aiofiles = "==23.1.0"
aiogram = "==3.0.0b7"
aiohttp = "==3.8.4"
aiosignal = "==1.3.1"
anyio = "==3.6.2"
async-timeout = "==4.0.2"
asyncer = "==0.0.2"
attrs = "==23.1.0"
cachetools = "==5.3.0"
certifi = "==2022.12.7"
charset-normalizer = "==3.1.0"
click = "==8.1.3"
coloredlogs = "==15.0.1"
environs = "==9.5.0"
fastapi = "==0.95.1"
filetype = "==1.2.0"
flatbuffers = "==23.3.3"
frozenlist = "==1.3.3"
h11 = "==0.14.0"
humanfriendly = "==10.0"
idna = "==3.4"
imagehash = "==4.3.1"
imageio = "==2.27.0"
lazy-loader = "==0.2"
llvmlite = "==0.39.1"
magic-filter = "==1.0.9"
marshmallow = "==3.19.0"
mpmath = "==1.3.0"
multidict = "==6.0.4"
networkx = "==3.1"
numba = "==0.56.4"
numpy = "==1.23.5"
onnxruntime = "==1.14.1"
opencv-python-headless = "==4.7.0.72"
packaging = "==23.1"
pillow = "==9.5.0"
platformdirs = "==3.2.0"
pooch = "==1.7.0"
protobuf = "==4.22.3"
pydantic = "==1.10.7"
pymatting = "==1.1.8"
python-dotenv = "==1.0.0"
python-multipart = "==0.0.6"
pywavelets = "==1.4.1"
requests = "==2.28.2"
scikit-image = "==0.20.0"
sniffio = "==1.3.0"
starlette = "==0.26.1"
sympy = "==1.11.1"
tifffile = "==2023.4.12"
tqdm = "==4.65.0"
typing-extensions = "==4.5.0"
urllib3 = "==1.26.15"
uvicorn = "==0.21.1"
watchdog = "==3.0.0"
yarl = "==1.8.2"
rembg = "==2.0.32"
scipy = "==1.10.1"
influxdb-client = {extras = ["async"], version = "^1.36.1"}
redis = "^4.5.5"

[tool.poetry.group.dev.dependencies]
pytest = "==7.3.1"
bandit = "==1.7.5"
coverage = "==7.2.3"
exceptiongroup = "==1.1.1"
flake8 = "==6.0.0"
flake8-bandit = "==4.1.1"
flake8-bugbear = "==23.3.23"
flake8-builtins = "==2.1.0"
flake8-class-attributes-order = "==0.1.3"
flake8-commas = "==2.1.0"
flake8-functions = "==0.0.8"
flake8-variables-names = "==0.0.5"
gitdb = "==4.0.10"
gitpython = "==3.1.31"
iniconfig = "==2.0.0"
markdown-it-py = "==2.2.0"
mccabe = "==0.7.0"
mdurl = "==0.1.2"
mr-proper = "==0.0.7"
pbr = "==5.11.1"
pep8-naming = "==0.13.3"
pluggy = "==1.0.0"
pycodestyle = "==2.10.0"
pyflakes = "==3.0.1"
pygments = "==2.15.1"
pyyaml = "==6.0"
rich = "==13.3.5"
smmap = "==5.0.0"
stdlib-list = "==0.8.0"
stevedore = "==5.0.0"
tomli = "==2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
